change mvn config to java version 11